# Sailbot_ROS

./: .gitignore  Jenkinsfile  README.md  XbeeCommunicationManager.cpp  XbeeCommunicationManager.h  routePlanner.py
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: control_arduino.pc
src/control_arduino/: CMakeLists.txt  package.xml  readme.txt  wind_to_sailangle.py
src/control_arduino/scripts/: MotionPlanning.py  publish_cmd_heading.py  rudder_command.py  wind_to_sailangle.py
src/control_arduino/src/: NonblockingRate.cpp  (+7 more)
src/gps_odom/: CMakeLists.txt  package.xml
src/motion_planning/: CMakeLists.txt  package.xml  sailboatNote.txt
src/nmea_navsat_driver/: CMakeLists.txt
src/objective/: CMakeLists.txt  package.xml
src/sailbot_launch/: CMakeLists.txt  package.xml
src/sailbot_nav/: CMakeLists.txt  README.md  package.xml
src/sailbot_sim/: CMakeLists.txt  README.md  package.xml
src/sailbot_sim/launch/: sim.launch  sim_with_rviz.launch
src/sailbot_sim/msg/: TrueWind.msg
src/sailbot_sim/rviz/: sim.rviz
src/sailbot_sim/scripts/: keyboard_steer.py  sim_odom.py  sim_windsensor.py  simulator_base_test.py  testWind.py  true_wind.py  wind_markers.py
src/sailbot_sim/src/: BoatSim.cpp  BoatSim.h  keyboard_steer.py  sailbot_sim.cpp  sim_odom.py  sim_windsensor.py
src/sailbot_sim/test/: test_simulator.test
src/sailbot_sim/urdf/: boat.urdf
src/sensors/: CMakeLists.txt  package.xml
src/test_loc/: CMakeLists.txt  package.xml
src/vision/: CMakeLists.txt  note  package.xml
src/visualization/: CMakeLists.txt  package.xml
(+103 files in other folders)
