<?xml version="1.0"?>
<package>
  <name>sailbot_sim</name>
  <version>0.0.0</version>
  <description>The sailbot_sim package</description>
  <license>MIT</license>
  <maintainer email="andrew@lobos.me">andrew</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
